<resources>
    <string name="app_name">Dreamcatchers</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="registro">Registro</string>
    <string name="user">USUARIO</string>
    <string name="password">CONTRASEÑA</string>
    <string name="name">NOMBRE</string>
    <string name="lastname">APELLIDOS</string>
    <string name="email">CORREO</string>
    <string name="address">DIRECCIÓN</string>
    <string name="phone">TELÉFONO</string>
    <string name="university">UNIVERSIDAD</string>
    <string name="carreer">CARRERA</string>
    <string name="resetear">Resetear</string>
    <string name="enviar">Ingresar</string>
    <string name="register">Registro</string>
    <string name="title_activity_main_page">Menú empresas</string>
    <string name="navigation_drawer_open">Abrir navegación</string>
    <string name="navigation_drawer_close">Cerrar navegación</string>
    <string name="nav_header_title">Dreamcatchers</string>
    <string name="nav_header_desc">Navegación</string>
    <string name="action_settings">Ajustes</string>

    <string name="menu_home">Menú empresas</string>
    <string name="menu_gallery">Perfil</string>
    <string name="menu_slideshow">Mis publicaciones</string>
</resources>