<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">


    <LinearLayout
        android:id="@+id/ll_main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3B3B3B"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="398dp"
            android:layout_height="128dp"
            android:contentDescription="TODO"
            app:srcCompat="@drawable/logo_slogan" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:padding="30dp"
            android:text="@string/registro"
            android:textAllCaps="true"
            android:textColor="#57AEAE"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:fontFamily="@font/lato"
            android:hint="@string/user"
            android:inputType="text"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textColor="#57AEAE"
            android:textColorHint="#52afaa"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:fontFamily="@font/lato"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textColor="#57AEAE"
            android:textColorHint="#52afaa"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:fontFamily="@font/lato"
            android:hint="@string/name"
            android:inputType="text"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textColor="#57AEAE"
            android:textColorHint="#52afaa"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/et_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:fontFamily="@font/lato"
            android:hint="@string/lastname"
            android:inputType="text"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textColor="#57AEAE"
            android:textColorHint="#52afaa"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:fontFamily="@font/lato"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textColor="#57AEAE"
            android:textColorHint="#52afaa"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:fontFamily="@font/lato"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textColor="#57AEAE"
            android:textColorHint="#52afaa"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/et_university"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:fontFamily="@font/lato"
            android:hint="@string/university"
            android:inputType="text"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textColor="#57AEAE"
            android:textColorHint="#52afaa"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/et_carreer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:fontFamily="@font/lato"
            android:hint="@string/carreer"
            android:inputType="text"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textColor="#57AEAE"
            android:textColorHint="#52afaa"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="25dp">

            <Button
                android:id="@+id/btn_reset"
                android:layout_width="45dp"
                android:layout_height="38dp"
                android:background="@android:drawable/ic_menu_delete"
                android:backgroundTint="#57AEAE"
                android:fontFamily="@font/lato"
                android:textAllCaps="true"
                android:textColor="#444444"
                android:textSize="12sp"
                android:visibility="visible"
                tools:visibility="visible" />


            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#57AEAE"
                android:fontFamily="@font/lato"
                android:text="@string/register"
                android:textAllCaps="true"
                android:textColor="#444444" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>